services changed but need to fix nav z-index

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,9 +1,9 @@
 .fun-link {
     background-color: $darkBlack;
-    color: $white;
     position: relative;
     overflow: hidden;
     z-index: 1;
+    cursor: pointer;
 
     &::after {
         content: "";
