--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -1,6 +1,11 @@
 html, body {
-    color: $white;
+    color: $logoColor;
+    font-family: $font-stack;
 }
 .main {
-    margin-top: 5em;
+    margin-top: 7em;
+
+    @media screen and (max-width: $med) {
+        margin-top: 4em;
+    }
 }
