--- a/src/styles/pages/_all.scss
+++ b/src/styles/pages/_all.scss
@@ -2,13 +2,15 @@
 @import 'services';
 
 .bg {
+    // filter: blur(5px);
     position: fixed;
     z-index: -100;
     overflow-y: auto;
     top: 0;
+    left: -10px;
     min-height: 100vh;
-    height: 100%;
-    width: 100vw;
+    height: 105%;
+    width: 105vw;
     /* image import url is from main.css (after compile) */
     background-image: url('../images/bg.png');
     background-repeat: repeat-y;
